Fixed another horizontal overflow at a certain browser width.

--- a/style/main.scss
+++ b/style/main.scss
@@ -915,15 +915,9 @@ section:nth-of-type(2) {
 		}
 
 		h1 {
-			font-size: 2em;
+			font-size: 1.5rem;
 		}
 	}
-
-
-
-
-
-
 
 // filter
 	section:nth-of-type(2) {
@@ -1013,11 +1007,16 @@ section:nth-of-type(2) {
 
 	}
 
-
-
-
 } //end mq min-width 30rem
 
+
+@media screen and(min-width: 45rem) {
+	section:nth-of-type(1) {
+		h1 {
+			font-size: 2.5em;
+		}
+	}
+}
 
 @media screen and(min-width: 70rem) {
 
